[project]
name = "News-Application-Using-RAG"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "lxml>=6.0.2",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
]
